tests/derive-tests/variant_downcast/fail/struct.err.txt
error: expected `enum`
 --> /tests/derive-tests/variant_downcast/fail/struct.rs:4:5
  |
4 | pub struct Struct {
  |     ^^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
